--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,26 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="pref_entries">
-        <item>Big Buck Bunny</item>
-        <item>Elephants Dream</item>
-        <item>Sintel</item>
-        <item>Tears of Steel</item>
-    </string-array>
 
-    <string-array name="pref_values">
-        <item>Big Buck Bunny</item>
-        <item>Elephants Dream</item>
-        <item>Sintel</item>
-        <item>Tears of Steel</item>
-    </string-array>
-
-    <string-array name="mode_types">
-        <item>BOSSWAVE</item>
+    <string-array name="conn_types">
         <item>HTTP</item>
-    </string-array>
-
-    <string-array name="mode_values">
         <item>BOSSWAVE</item>
-        <item>HTTP</item>
     </string-array>
 </resources>
