--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ListPreference
-        android:key="mode_list"
-        android:defaultValue="BOSSWAVE"
-        android:title="Mode"
-        android:entries="@array/mode_types"
-        android:entryValues="@array/mode_values"
-        android:icon="@mipmap/ic_launcher"
-        android:summary="choose a mode for sending image"
-            />
+        android:defaultValue="@string/conn_type_val"
+        android:entries="@array/conn_types"
+        android:entryValues="@array/conn_types"
+        android:key="@string/conn_type_key"
+        android:title="@string/conn_type_title"/>
     <EditTextPreference
         android:defaultValue="@string/cellmate_server_addr_val"
         android:key="@string/cellmate_server_addr_key"
@@ -63,9 +60,4 @@
         android:key="@string/camera_cy_key"
         android:numeric="decimal"
         android:title="@string/camera_cy_title"/>
-    <CheckBoxPreference
-        android:defaultValue="@string/flip_x_value"
-        android:key="@string/flip_x_key"
-        android:summary="@string/flip_x_summary"
-        android:title="@string/flip_x_title"/>
 </PreferenceScreen>
