Finished implementing basic grpc to Cellmate Android

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,5 +4,6 @@
     <string-array name="conn_types">
         <item>HTTP</item>
         <item>BOSSWAVE</item>
+        <item>GRPC</item>
     </string-array>
 </resources>
