--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -57,5 +57,15 @@
         android:layout_gravity="center"
         android:text="@string/capture"/>
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/on"
+        android:layout_marginEnd="28dp"
+        android:layout_marginTop="35dp"
+        android:id="@+id/textView" />
+
 
 </RelativeLayout>
