--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -16,6 +16,15 @@
         android:numeric="integer"
         android:title="@string/cellmate_server_port_title"/>
     <EditTextPreference
+        android:defaultValue="@string/Grpc_server_addr_val"
+        android:key="@string/Grpc_server_addr_key"
+        android:title="@string/Grpc_server_addr_title"/>
+    <EditTextPreference
+        android:defaultValue="@string/Grpc_server_port_val"
+        android:key="@string/Grpc_server_port_key"
+        android:numeric="integer"
+        android:title="@string/Grpc_server_port_title"/>
+    <EditTextPreference
         android:defaultValue="@string/bosswave_router_addr_val"
         android:key="@string/bosswave_router_addr_key"
         android:title="@string/bosswave_router_addr_title"/>
