--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,12 +5,10 @@
     android:layout_height="match_parent">
     <FrameLayout
         android:id="@+id/preview_fragment"
-        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="match_parent" />
     <FrameLayout
         android:id="@+id/task_fragment"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="40dp" />
 </LinearLayout>
