--- a/app/src/main/res/layout/thermostat.xml
+++ b/app/src/main/res/layout/thermostat.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/controlText"
@@ -16,8 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/on"
-        android:layout_toStartOf="@+id/on"
+        android:layout_alignTop="@+id/increase"
+        android:layout_toStartOf="@+id/increase"
         android:background="#07000000"
         android:gravity="center"
         android:text="@string/none"
@@ -25,21 +25,21 @@
         android:textStyle="bold"/>
 
     <Button
-        android:id="@+id/on"
+        android:id="@+id/increase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/off"
+        android:layout_alignTop="@+id/decrease"
         android:layout_gravity="center"
-        android:layout_toStartOf="@+id/off"
-        android:text="@string/on" />
+        android:layout_toStartOf="@+id/decrease"
+        android:text="@string/plus" />
 
     <Button
-        android:id="@+id/off"
+        android:id="@+id/decrease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center"
-        android:text="@string/off" />
+        android:text="@string/minus" />
 
 </RelativeLayout>
