--- a/app/src/main/res/layout/preview_fragment.xml
+++ b/app/src/main/res/layout/preview_fragment.xml
@@ -23,6 +23,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
+    <ImageView
+        android:id="@+id/barcode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/texture" />
+
     <!--<ImageView-->
         <!--android:id="@+id/imageView"-->
         <!--android:layout_width="match_parent"-->
